--- a/src/IMHOS/IMHOS.vbproj
+++ b/src/IMHOS/IMHOS.vbproj
@@ -8,16 +8,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Content\hex.png" />
+    <None Remove="Content\ship.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Content\hex.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\ship.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
   </ItemGroup>
 
   <ItemGroup>
     <Import Include="Microsoft.Win32.SafeHandles" />
     <Import Include="Microsoft.Xna.Framework" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Content\" />
+    <Import Include="Microsoft.Xna.Framework.Design" />
+    <Import Include="Microsoft.Xna.Framework.Graphics" />
+    <Import Include="System.Globalization" />
+    <Import Include="System.IO" />
   </ItemGroup>
 
 </Project>
