--- a/src/IMHOS/IMHOS.vbproj
+++ b/src/IMHOS/IMHOS.vbproj
@@ -5,6 +5,15 @@
     <RootNamespace>IMHOS</RootNamespace>
     <TargetFramework>net6.0</TargetFramework>
     <StartupObject>IMHOS.Program</StartupObject>
+    <OptionStrict>On</OptionStrict>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
