--- a/src/IMHOS/IMHOS.vbproj
+++ b/src/IMHOS/IMHOS.vbproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Import Include="IMHOS.Domain" />
     <Import Include="IMHOS.My" />
     <Import Include="IMHOS.UI" />
     <Import Include="Microsoft.Win32.SafeHandles" />
