--- a/src/IMHOS.UI/IMHOS.UI.vbproj
+++ b/src/IMHOS.UI/IMHOS.UI.vbproj
@@ -7,6 +7,7 @@
     <ProjectReference Include="..\IMHOS.Domain\IMHOS.Domain.vbproj" />
   </ItemGroup>
   <ItemGroup>
+    <Import Include="IMHOS.Data" />
     <Import Include="IMHOS.Domain" />
   </ItemGroup>
 </Project>
